--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,1 +1,5 @@
 @import '@primer/css/index.scss';
+
+// body {
+//   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+// }
